various fixed, added <hr> tags for readability, added js limiter for input values and warning message

--- a/style.css
+++ b/style.css
@@ -84,6 +84,10 @@ a {
   font-style: italic;
 }
 
+hr {
+  color: var(--main_font_color);
+}
+
 /* Legacy class, leaving in case I want to use it again ever */
 span.subscript {
   color: var(--subscript_color);
